# ades-core-engine-api-framework

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README.md
3ty/proc-comm-lib-cwl/src/model/: commandlinetool.cpp  commandlinetool.hpp  graph.cpp
3ty/proc-comm-zoo/: CMakeLists.txt  CMakeLists.txt.in
assets/: main.cfg
scripts/: build.sh  quickBuild.sh
src/: main.cpp
src/deployundeploy/zoo/: CMakeLists.txt  Makefile  deploy.cpp  zooconverter.cpp
src/deprecated/: Makefile
src/templates/: Makefile  argolib.cpp  interface.cpp  template.cpp  zooargo.hpp
src/zoo/: Makefile  argo.cpp  argo.cwl  argo.zcfg  argolib.cpp  zooargo.hpp
travis/: acceptanceTest.sh  build.sh  containerCreation.sh
